Fixing cards on mobile

--- a/styles/project-cards.css
+++ b/styles/project-cards.css
@@ -47,15 +47,15 @@
   left: 0;
   z-index: 1;
 }
-.project-card:hover {
+.project-card.active {
   grid-template-rows: 0fr auto 1fr;
 }
-.project-card:hover > img {
+.project-card.active > img {
   transform: scale(1.05, 1.05);
   filter: blur(1.5px);
   transition: transform 0.5s, filter 0.5s;
 }
-.project-card:hover > a {
+.project-card.active > a {
   height: 100%;
 }
 .project-card h2,
